--- a/website/newsletter/210/index.mdx
+++ b/website/newsletter/210/index.mdx
@@ -160,8 +160,8 @@ Expo has announced "Workflows," a new CI/CD tool for React Native and Expo apps 
 
 ## 🤭 Fun {#fun}
 
-[![inlined function breaks memoization](/emails/issues/210/meme1.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![React 19 is coming](/emails/issues/210/meme2.jpg)](https://bsky.app/profile/sebastienlorber.com/post/3lay3dhefgc2o)
 
-[![prompt engineer](/emails/issues/210/meme2.jpg)](https://twitter.com/TODOTODOTODOTODOTODOTODOTODOTODOTODOTODO)
+[![inlined function breaks memoization](/emails/issues/210/meme1.jpg)](https://x.com/shuding_/status/1844678879748723059)
 
 See ya! 👋
