--- a/website/newsletter/210/index.mdx
+++ b/website/newsletter/210/index.mdx
@@ -20,7 +20,7 @@ Meanwhile, **Universal React Server Components** in Expo Router have entered bet
 
 And the party isn’t over yet! 🎉 Stay tuned for next week’s issue, where we’ll dive into even more announcements from Expo’s ongoing celebration.
 
-Also check our partner conf [React Paris 2025](https://react.paris/?utm_source=Newsletter&utm_medium=thisweekinreact) (🇫🇷 Paris - 20 & 21 March). Kick off your year with one of the first dev conferences of 2025! Speakers include Dominik 'TkDodo' Dorfmeister, Kent C. Dodds, and Aurora Scharff. CFPs are open, and you can get 20% off tickets with code "TWIR"!
+Also check our partner conf [React Paris 2025](https://react.paris/?utm_source=Newsletter&utm_medium=thisweekinreact) (🇫🇷 Paris - 20 & 21 March). Kick off your year with one of the first dev conferences of 2025! Speakers include Dominik 'TkDodo' Dorfmeister, Kent C. Dodds, and Aurora Scharff. CFPs are open, and you can get 20% off tickets with code "TWIR"!
 
 We'd be super grateful if you'd share this newsletter or support us here :
 
@@ -70,7 +70,7 @@ As usual, the new features were already available in Next.JS (which uses react c
 ---
 
 - 💸 [Omlet – Scan your repo and measure how and where React components are used](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-nov-2024)
-- 🗓️ [React Day Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇩🇪 Berlin - 13 & 16 December - Hurry and grab your ticket to the conference as prices are about to go up! And don’t forget your discount with code “TWIR”.
+- 🗓️ [React Day Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇩🇪 Berlin - 13 & 16 December - Hurry and grab your ticket to the conference as prices are about to go up! And don’t forget your discount with code “TWIR”.
 - 👀 [Next.js segment cache initial implementation](https://github.com/vercel/next.js/pull/72875): A rewrite of App Router's client caching implementation, designed with PPR and "use cache" in mind. Not production-ready at all, but in the future Next will cache by route segment instead of by full URL.
 - 👀 [React Query may soon have a unified staleTime per query](https://github.com/TanStack/query/pull/8313) instead of one per “observer” (e.g. each `useQuery`). This will be less flexible but certainly easier to reason about.
 - 📜 [Be careful with useSyncExternalStore](https://www.nico.fyi/blog/be-careful-with-usesyncexternalstore): implementation of a `useLocalStorage` hook using `useSyncExternalStore` and `superjson`.
@@ -149,7 +149,7 @@ Expo has announced "Workflows," a new CI/CD tool for React Native and Expo apps 
 ## 🔀 Other {#other}
 
 - 👀 [Deno \- Support importing wasm modules](https://github.com/denoland/deno/issues/2552)
-- 👀 [ES TC39 proposal \`import.sync()\` in stage 0](https://github.com/guybedford/proposal-import-sync)
+- 👀 [ES TC39 proposal `import.sync()` in stage 0](https://github.com/guybedford/proposal-import-sync)
 - 📜 [Self-contained Executable Programs with Deno Compile](https://deno.com/blog/deno-compile-executable-programs)
 - 📜 [Annotate traces directly in the Performance panel in Chrome DevTools](https://developer.chrome.com/blog/devtools-annotations?hl=en)
 - 📜 [Dependencies vs. devDependencies for JavaScript apps](https://angelika.me/2024/11/11/dependencies-vs-dev-dependencies-javascript-apps/)
