--- a/website/newsletter/210/index.mdx
+++ b/website/newsletter/210/index.mdx
@@ -70,9 +70,13 @@ As usual, the new features were already available in Next.JS (which uses react c
 ---
 
 - 💸 [Omlet – Scan your repo and measure how and where React components are used](https://omlet.dev/?utm_campaign=partner_this-week-in-react_newsletter-quick-link-nov-2024)
-- 🗓️ [React Day Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇩🇪 Berlin - 13 & 16 December - Hurry and grab your ticket to the conference as prices are about to go up! And don’t forget your discount with code “TWIR”.
+- 👀 [React IDE](https://youtu.be/C8Mg-NSyqWg?t=14452): Mofei from the React Compiler team unveils at React Summit the plan to work on a VSCode extension powered by the compiler.
+- 👀 [TanStack Start is officially in beta](https://bsky.app/profile/tannerlinsley.com/post/3lbdl4zp2ns2n)
 - 👀 [Next.js segment cache initial implementation](https://github.com/vercel/next.js/pull/72875): A rewrite of App Router's client caching implementation, designed with PPR and "use cache" in mind. Not production-ready at all, but in the future Next will cache by route segment instead of by full URL.
 - 👀 [React Query may soon have a unified staleTime per query](https://github.com/TanStack/query/pull/8313) instead of one per “observer” (e.g. each `useQuery`). This will be less flexible but certainly easier to reason about.
+- 📖 [The Road to Next](https://www.road-to-next.com/): Robin Wieruch launched his paid Next.js 15 course with early access discounts.
+- 🗓️ [React Day Berlin](https://reactday.berlin/?utm_source=Newsletter&utm_medium=thisweekinreact) - 🇩🇪 Berlin - 13 & 16 December - Hurry and grab your ticket to the conference as prices are about to go up! And don’t forget your discount with code “TWIR”.
+- 📜 [Essential Typescript for React](https://www.jacobparis.com/content/react-ts): A concise article on the most valuable tips to be productive.
 - 📜 [Be careful with useSyncExternalStore](https://www.nico.fyi/blog/be-careful-with-usesyncexternalstore): implementation of a `useLocalStorage` hook using `useSyncExternalStore` and `superjson`.
 - 📜 [5 differences between React server components and server-side rendering](https://www.tymzap.com/blog/5-differences-between-react-server-components-and-server-side-rendering): At this point you already know that they are not at all the same. This recaps the concrete differences between the two.
 - 📜 [Design System: from scratch or from the shelf?](https://www.voorhoede.nl/en/blog/design-system-from-scratch-from-the-shelf/)
@@ -81,8 +85,9 @@ As usual, the new features were already available in Next.JS (which uses react c
 - 📜 [Quick Guide to Building a PWA with Next.js](https://playfulprogramming.com/posts/pwa-nextjs-guide)
 - 📜 [Vercel - Skew Protection is now enabled by default for new projects](https://vercel.com/changelog/skew-protection-is-now-enabled-by-default-for-new-projects)
 - 📜 [React Anti-Pattern: Stop Passing Setters Down the Components Tree](https://matanbobi.dev/posts/stop-passing-setter-functions-to-components)
-- 📦 [react-scan](https://github.com/aidenybai/react-scan): a new tool to find performance issues React apps
-- 📦 [MistCSS 1.0](https://github.com/typicode/mistcss): Instead of generating full React components from CSS, the library now bets on generating types for intrinsic React JSX elements. Interesting idea!
+- 📦 [react-scan](https://github.com/aidenybai/react-scan): The MillionJS team released a new tool to find performance issues (re-renders) in React apps.
+- 📦 [PayloadCMS 3.0 \- Seamless integration with Next.js app router](https://github.com/payloadcms/payload/releases/tag/v3.0.0): The CMS can now run seamlessly within your existing Next.js app, exposing a `withPayload()` plugin.
+- 📦 [MistCSS 1.0](https://github.com/typicode/mistcss): Instead of generating full React components from CSS, the library now bets on generating types to enhance intrinsic React JSX elements. Interesting idea!
 - 🎥 [Jack Herrington - “use cache” NextJS’s latest take on data caching](https://www.youtube.com/watch?v=ZDRGEewXkrs)
 - 🎥 [Theo - How To Avoid Big Serverless Bills](https://www.youtube.com/watch?v=jsuNjCAngnQ): Various tips for Vercel or Next.js users.
 - 🎥 [React Summit US - Live Stream](https://www.youtube.com/watch?v=C8Mg-NSyqWg)
@@ -130,7 +135,7 @@ Expo has announced "Workflows," a new CI/CD tool for React Native and Expo apps 
 - 🐦 [Oskar made a POC of Jetpack Compose adaptive navigation for react-native-bottom-tabs](https://x.com/o_kwasniewski/status/1858620684706214095)
 - 🐦 [Mike demoed a 1.2GB file upload over the network with React Native FastIO](https://x.com/grabbou/status/1858920818744389947)
 - 🐦 [Jay is cooking a new List component, codename Legend List, that may be even faster than FlashList](https://x.com/jmeistrich/status/1855663310386958840)
-- 🐦 [SwiftUI MeshGradient component in React Native thanks to a new feature in Expo Modules not yet announced in Expo SDK 52](https://x.com/tsapeta/status/1859226070932660615)
+- 🐦 [SwiftUI MeshGradient component in React Native thanks to a new feature in Expo Modules not yet announced in Expo SDK 52](https://bsky.app/profile/tsapeta.dev/post/3lbf2kw75t22y)
 - 📜 [How to Integrate React Native With an Existing App](https://www.callstack.com/blog/how-to-integrate-react-native-with-an-existing-app)
 - 📦 [React Native 0.76.2](https://github.com/facebook/react-native/releases/tag/v0.76.2)
 - 📦 [React Native Executorch 0.1 \- Run AI models on device, powered by ExecuTorch](https://blog.swmansion.com/introducing-react-native-executorch-2bdb87592884)
