--- a/website/newsletter/210/index.mdx
+++ b/website/newsletter/210/index.mdx
@@ -172,4 +172,6 @@ Expo has announced "Workflows," a new CI/CD tool for React Native and Expo apps 
 
 [![inlined function breaks memoization](/emails/issues/210/meme1.jpg)](https://x.com/shuding_/status/1844678879748723059)
 
+[![well done angular](/emails/issues/210/meme3.jpg)](https://bsky.app/profile/did:plc:hxmev3uady7j4litwnr5fzbg/post/3lbfdts6p6c27)
+
 See ya! 👋
