--- a/website/newsletter/210/index.mdx
+++ b/website/newsletter/210/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /210
-title: "This Week In React #210: React 19, pre-warning, Next.js, IDE, TanStack, React Scan, MistCSS, PayloadCMS, Expo Workflows, Universal RSC, use dom, Yoga JSI, Skia, Turbo Haptics, TV, FastIO, SwiftUI, Angular 19..."
+title: "This Week In React #210: React 19 pre-warming, Next.js, IDE, TanStack, React Scan, MistCSS, PayloadCMS, Expo Workflows, Universal RSC, use dom, Yoga JSI, Skia, Turbo Haptics, TV, FastIO, SwiftUI, Angular 19..."
 authors: [matthieugicquel, cyrilbo]
 date: 11-20-2024
 ---
