--- a/website/newsletter/210/index.mdx
+++ b/website/newsletter/210/index.mdx
@@ -119,9 +119,9 @@ Want to work on challenging problems and have **impact on hundreds of applicatio
 
 ## 📱 React-Native {#react-native}
 
-[![Expo Workflows](/emails/issues/210/workflows.jpg)](https://reactnativeradio.com/episodes/rnr-314-announcing-expo-workflows-with-jon-samp)
+[![Expo Workflows](/emails/issues/210/workflows.jpg)](https://expo.dev/blog/expo-workflows-automate-your-release-process)
 
-[**Expo Workflows**](https://reactnativeradio.com/episodes/rnr-314-announcing-expo-workflows-with-jon-samp)  
+[**Expo Workflows**](https://expo.dev/blog/expo-workflows-automate-your-release-process)
 Expo has announced "Workflows," a new CI/CD tool for React Native and Expo apps that simplifies and accelerates app releases with pre-packaged jobs (such as E2E tests using Maestro), automated workflows, and smart machine selection for optimal performance. While it’s not a direct replacement for more general CI/CD solutions like GitHub Actions, it promises exciting improvements worth exploring.
 
 🎉 [Expo Launch Party](https://expo.dev/launch-party) is still running. Don’t miss their announcements\!
