--- a/website/newsletter/conferences/react-summit-us-2024/index.mdx
+++ b/website/newsletter/conferences/react-summit-us-2024/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /conferences/2024/react-summit-us-recap
-title: "This Week In React: React Summit 2024 Recap"
+title: "React Summit 2024 Recap"
 authors:
   - name: "Anton Meleshkin"
     url: https://www.linkedin.com/in/anton-meleshkin-b226b5184/
@@ -54,12 +54,6 @@ Addy Osmani delivered an exciting review of the latest Chrome DevTools features 
 - **Font Color Contrast Fixing Tool**: Now built directly into the color picker.
 - **Override XHR and Fetch Requests**: Mock data can be injected into these requests, and even headers can be mocked.
 
----
-
-<SubscribeFormEmbed placement="middle" />
-
----
-
 ## AI and Accessibility: A Conversation Worth Having
 
 Accessibility is often overlooked in development, but Cat Johnson highlights how AI is already making a difference and what developers can do now.
@@ -69,8 +63,6 @@ AI has brought us tools like improved text-to-speech, automated meeting notes, a
 Developers can enhance accessibility by writing clean HTML with proper tags and attributes. Accessibility tools can test and ensure your work is functional. Adding accessibility scans like **axe-core** or **lighthouse-cli** to your CI/CD pipeline can further streamline this process.
 
 By leveraging AI and following best practices, we can make technology more inclusive for everyone.
-
----
 
 ## Kent C. Dodds’ talk, "Abracadabra: The Vanishing Network," traces web app evolution from multi-page apps (MPAs) to React Server Components (RSC).
 
@@ -82,7 +74,7 @@ Web app development has evolved to meet the growing demands of users and develop
 - Progressively enhanced SPAs (PESPA) brought server-side fetching and rendering, improving UX. Yet, tying logic to routes limited reusable components.
 - RSCs enable full-stack, reusable components, simplifying workflows while improving speed and scalability.
 
----
+<SubscribeFormEmbed placement="middle" />
 
 ## Theo Browne's talk, "Out Of Order Streaming (The Secret Powering Modern React)"
 
@@ -91,8 +83,6 @@ Theo explores one of React's most innovative advancements—out-of-order streami
 This limitation was solved by using RSC. The \<`template/>` and \<`script/>` tags are used to identify placeholders for unresolved content and replace them dynamically when data becomes available.
 
 Recent advancements, such as partial pre-rendering and dynamic IO in Next.js, combine static and dynamic rendering. This hybrid approach allows initial static content to be cached on CDNs for faster loads, with subsequent dynamic updates streamed from the server, optimizing both speed and developer workflow. These methods revolutionize SSR by enhancing UX and supporting complex web interactions seamlessly.
-
----
 
 ## Everything You Need to Know About React 19
 
@@ -105,8 +95,6 @@ Shruti Kapoor (Frontend engineer at Slack) provides an overview of the forthcomi
 - **\`ref\` change**: finally it is a prop, so say goodbye to \`forwardRef\`
 - **Improved errors**: errors became more descriptive
 - **Context change**: Render \<Context\> instead of \<Context.Provider\>
-
----
 
 ## AI Will Revolutionize UI
 
@@ -127,5 +115,3 @@ He tells how to integrate AI into our applications and shows with clear examples
 ---
 
 See ya! 👋
-
-<SubscribeFormEmbed placement="bottom" />
