--- a/website/newsletter/conferences/react-summit-us-2024/index.mdx
+++ b/website/newsletter/conferences/react-summit-us-2024/index.mdx
@@ -46,7 +46,9 @@ We'd be super grateful if you'd share this NEWSLETTER or support us here :
 
 ## Chrome DevTools: State of the Union 2024 - Debugging React & Beyond
 
-Addy Osmani delivered an exciting review of the latest Chrome DevTools features and highlighted the INP metric. Here’s a summary of the main points covered:
+![Addy speaking](/emails/conferences/2024/react-summit-us/addy.jpg)
+
+**[Addy Osmani](https://bsky.app/profile/addyosmani.bsky.social)** (Head of Chrome DX) delivered an exciting review of the latest Chrome DevTools features and highlighted the INP metric. Here’s a summary of the main points covered:
 
 - **Gemini AI in DevTools**: You can now ask it to change the UI, help with errors, or assist with any challenges you might face during development.
 - **Server Components and the “Memo” Tag in React DevTools**: This, along with server logs in the browser console in Next.js, enables you to manage Suspense loading states more easily.
@@ -56,7 +58,9 @@ Addy Osmani delivered an exciting review of the latest Chrome DevTools features 
 
 ## AI and Accessibility: A Conversation Worth Having
 
-Accessibility is often overlooked in development, but Cat Johnson highlights how AI is already making a difference and what developers can do now.
+![Cat speaking](/emails/conferences/2024/react-summit-us/cat.jpg)
+
+Accessibility is often overlooked in development, but **[Cat Johnson](https://www.linkedin.com/in/catandthemachines/)** highlights how AI is already making a difference and what developers can do now.
 
 AI has brought us tools like improved text-to-speech, automated meeting notes, and advanced voice commands. Apps like **Be My Eyes** use AI to describe objects captured with a phone camera, offering invaluable support for visually impaired users.
 
@@ -64,9 +68,11 @@ Developers can enhance accessibility by writing clean HTML with proper tags and 
 
 By leveraging AI and following best practices, we can make technology more inclusive for everyone.
 
-## Kent C. Dodds’ talk, "Abracadabra: The Vanishing Network," traces web app evolution from multi-page apps (MPAs) to React Server Components (RSC).
+## Abracadabra: The Vanishing Network
 
-Web app development has evolved to meet the growing demands of users and developers. Let’s look at the key stages of this evolution highlighted in the talk:
+![Kent speaking](/emails/conferences/2024/react-summit-us/kent.jpg)
+
+Web app development has evolved to meet the growing demands of users and developers. **[Kent C. Dodds](https://bsky.app/profile/kentcdodds.com)** traces web app evolution from multi-page apps (MPAs) to React Server Components (RSC). Let’s look at the key stages of this evolution highlighted in the talk:
 
 - MPA is simple and effective, but requires a full page reload.
 - Progressively enhanced MPAs (PEMPA) introduced JavaScript for partial updates and UX improvement but added complexity and server-client duplication.
@@ -76,9 +82,11 @@ Web app development has evolved to meet the growing demands of users and develop
 
 <SubscribeFormEmbed placement="middle" />
 
-## Theo Browne's talk, "Out Of Order Streaming (The Secret Powering Modern React)"
+## Out Of Order Streaming - The Secret Powering Modern React
 
-Theo explores one of React's most innovative advancements—out-of-order streaming. Streaming HTML in web applications allows browsers to progressively render incomplete HTML as it arrives, significantly improving perceived performance. This is especially valuable for SSR. The only limitation was the order of the elements. HTML is linear, meaning that a slow component at the top of the HTML will block other components below.
+![Theo speaking](/emails/conferences/2024/react-summit-us/theo.jpg)
+
+**[Theo Browne](https://bsky.app/profile/t3.gg)** explores one of React's most innovative advancements—out-of-order streaming. Streaming HTML in web applications allows browsers to progressively render incomplete HTML as it arrives, significantly improving perceived performance. This is especially valuable for SSR. The only limitation was the order of the elements. HTML is linear, meaning that a slow component at the top of the HTML will block other components below.
 
 This limitation was solved by using RSC. The \<`template/>` and \<`script/>` tags are used to identify placeholders for unresolved content and replace them dynamically when data becomes available.
 
@@ -86,7 +94,9 @@ Recent advancements, such as partial pre-rendering and dynamic IO in Next.js, co
 
 ## Everything You Need to Know About React 19
 
-Shruti Kapoor (Frontend engineer at Slack) provides an overview of the forthcoming stable update to the React library, which promises a lot of new and exciting things. Here are the key features of the new version of React as told by Shruti Kapoor:
+![Shruti speaking](/emails/conferences/2024/react-summit-us/shruti.jpg)
+
+**[Shruti Kapoor](https://bsky.app/profile/shrutikapoor08.bsky.social)** (Frontend engineer at Slack) provides an overview of the forthcoming stable update to the React library, which promises a lot of new and exciting things. Here are the key features of the new version of React as told by Shruti Kapoor:
 
 - **React actions**: functions that use async transitions. It also supported on the server.
 - **New hooks**: \`useActionState\` and \`useFormStatus\` will make building forms easier. \`useOptimistic\` will provide fancy way to make UI smooth.
@@ -98,7 +108,9 @@ Shruti Kapoor (Frontend engineer at Slack) provides an overview of the forthcomi
 
 ## AI Will Revolutionize UI
 
-Jack Herrington shows common problems when we trying to use AI in our applications:
+![Jack speaking](/emails/conferences/2024/react-summit-us/jack.jpg)
+
+**[Jack Herrington](https://bsky.app/profile/jherr.dev)** shows common problems when we trying to use AI in our applications:
 
 - Super big context, that we need to provide to the model
 - How to get the right data?
