--- a/website/newsletter/conferences/react-summit-us-2024/index.mdx
+++ b/website/newsletter/conferences/react-summit-us-2024/index.mdx
@@ -29,9 +29,9 @@ date: 11-25-2024
 unlisted: true
 ---
 
-Wondering what's this fancy e-mail on a Monday? Well, we're trying something new!
+What's this fancy e-mail on a Monday? Well, we're trying something new!
 
-Last week, **[React Summit US 2024](https://reactsummit.us?utm_source=Newsletter&utm_medium=thisweekinreact)** took place in New York for the second time. We partnered with the event organizers to send you a conf recap.
+Last week, **[React Summit US 2024](https://reactsummit.us?utm_source=Newsletter&utm_medium=thisweekinreact)** took place in New York. We partnered with the event organizers to send you a conf recap.
 
 <!-- truncate -->
 
@@ -59,18 +59,6 @@ Without further ado, here are the 6 talks we've selected!
 - **Font Color Contrast Fixing Tool**: Now built directly into the color picker.
 - **Override XHR and Fetch Requests**: Mock data can be injected into these requests, and even headers can be mocked.
 
-## AI and Accessibility: A Conversation Worth Having
-
-![Cat speaking](/emails/conferences/2024/react-summit-us/cat.jpg)
-
-Accessibility is often overlooked in development, but **[Cat Johnson](https://www.linkedin.com/in/catandthemachines/)** highlights how AI is already making a difference and what developers can do now.
-
-AI has brought us tools like improved text-to-speech, automated meeting notes, and advanced voice commands. Apps like **Be My Eyes** use AI to describe objects captured with a phone camera, offering invaluable support for visually impaired users.
-
-Developers can enhance accessibility by writing clean HTML with proper tags and attributes. Accessibility tools can test and ensure your work is functional. Adding accessibility scans like **axe-core** or **lighthouse-cli** to your CI/CD pipeline can further streamline this process.
-
-By leveraging AI and following best practices, we can make technology more inclusive for everyone.
-
 ## Abracadabra: The Vanishing Network
 
 ![Kent speaking](/emails/conferences/2024/react-summit-us/kent.jpg)
@@ -83,8 +71,6 @@ Web app development has evolved to meet the growing demands of users and develop
 - Progressively enhanced SPAs (PESPA) brought server-side fetching and rendering, improving UX. Yet, tying logic to routes limited reusable components.
 - RSCs enable full-stack, reusable components, simplifying workflows while improving speed and scalability.
 
-<SubscribeFormEmbed placement="middle" />
-
 ## Out Of Order Streaming - The Secret Powering Modern React
 
 ![Theo speaking](/emails/conferences/2024/react-summit-us/theo.jpg)
@@ -94,6 +80,8 @@ Web app development has evolved to meet the growing demands of users and develop
 This limitation was solved by using RSC. The \<`template/>` and \<`script/>` tags are used to identify placeholders for unresolved content and replace them dynamically when data becomes available.
 
 Recent advancements, such as partial pre-rendering and dynamic IO in Next.js, combine static and dynamic rendering. This hybrid approach allows initial static content to be cached on CDNs for faster loads, with subsequent dynamic updates streamed from the server, optimizing both speed and developer workflow. These methods revolutionize SSR by enhancing UX and supporting complex web interactions seamlessly.
+
+<SubscribeFormEmbed placement="middle" />
 
 ## Everything You Need to Know About React 19
 
@@ -126,6 +114,18 @@ He tells how to integrate AI into our applications and shows with clear examples
 - You can use tools both on the server and on the client for UI
 - The AI can have chives on which tool to use
 - You don’t have to use the Vercel AI library or OpenAI. It is possible to use even the local LLM.
+
+## AI and Accessibility: A Conversation Worth Having
+
+![Cat speaking](/emails/conferences/2024/react-summit-us/cat.jpg)
+
+Accessibility is often overlooked in development, but **[Cat Johnson](https://www.linkedin.com/in/catandthemachines/)** highlights how AI is already making a difference and what developers can do now.
+
+AI has brought us tools like improved text-to-speech, automated meeting notes, and advanced voice commands. Apps like **Be My Eyes** use AI to describe objects captured with a phone camera, offering invaluable support for visually impaired users.
+
+Developers can enhance accessibility by writing clean HTML with proper tags and attributes. Accessibility tools can test and ensure your work is functional. Adding accessibility scans like **axe-core** or **lighthouse-cli** to your CI/CD pipeline can further streamline this process.
+
+By leveraging AI and following best practices, we can make technology more inclusive for everyone.
 
 ---
 
