--- a/website/newsletter/conferences/react-summit-us-2024/index.mdx
+++ b/website/newsletter/conferences/react-summit-us-2024/index.mdx
@@ -131,10 +131,10 @@ By leveraging AI and following best practices, we can make technology more inclu
 
 That's a wrap!
 
-Before we leave, don't forget
+Before we leave:
 
-- [React Summit 2025 - early bird tickets on sale](https://reactsummit.com?utm_source=Newsletter&utm_medium=thisweekinreact)
-- [FocusReactive - Your Next.js CMS and e-Commerce experts](https://focusreactive.com/?utm_source=Newsletter&utm_medium=thisweekinreact)
-- Give us feedback: did you like this email? Hit reply!
+- Check the [React Summit 2025](https://reactsummit.com?utm_source=Newsletter&utm_medium=thisweekinreact) early bird tickets
+- Hire [FocusReactive](https://focusreactive.com/?utm_source=Newsletter&utm_medium=thisweekinreact) for their Next.js CMS and e-Commerce expertise
+- Give us feedback - Did you like this email? Hit reply and tell us!
 
 See ya! 👋
