--- a/website/newsletter/conferences/react-summit-us-2024/index.mdx
+++ b/website/newsletter/conferences/react-summit-us-2024/index.mdx
@@ -37,7 +37,7 @@ Last week, **[React Summit US 2024](https://reactsummit.us?utm_source=Newsletter
 
 ![conf picture](/emails/conferences/2024/react-summit-us/conf.jpg)
 
-**[Focus Reactive](https://focusreactive.com?utm_source=Newsletter&utm_medium=thisweekinreact)** devs wrote the summaries. They are trusted technological partner delivering advanced content platforms optimized for performance, scalability, and SEO. Experts in Next.js, Headless CMS, eCommerce, and AI integrations. Partners: Vercel, Shopify, Sanity. [Learn more](https://focusreactive.com?utm_source=Newsletter&utm_medium=thisweekinreact).
+**[Focus Reactive](https://focusreactive.com?utm_source=Newsletter&utm_medium=thisweekinreact)** devs wrote the summaries. They are trusted technological partners delivering advanced content platforms optimized for performance, scalability, and SEO. Experts in Next.js, Headless CMS, eCommerce, and AI integrations. Partners: Vercel, Shopify, Sanity. [Learn more](https://focusreactive.com?utm_source=Newsletter&utm_medium=thisweekinreact).
 
 The US edition of the conf may have wrapped up, but **[React Summit 2025](https://reactsummit.com?utm_source=Newsletter&utm_medium=thisweekinreact)** (🇳🇱 Amsterdam edition - June 13-17 2025) has just been announced! Get ready for another incredible event, just as cool as last year, but in a unique venue. Early-bird tickets are on sale now!
 
