--- a/website/newsletter/conferences/react-summit-us-2024/index.mdx
+++ b/website/newsletter/conferences/react-summit-us-2024/index.mdx
@@ -1,6 +1,6 @@
 ---
 slug: /conferences/2024/react-summit-us-recap
-title: "React Summit 2024 Recap"
+title: "React Summit 2024 - Conf Recap"
 authors:
   - name: "Anton Meleshkin"
     url: https://www.linkedin.com/in/anton-meleshkin-b226b5184/
@@ -31,7 +31,7 @@ unlisted: true
 
 What's this fancy e-mail on a Monday? Well, we're trying something new!
 
-Last week, **[React Summit US 2024](https://reactsummit.us?utm_source=Newsletter&utm_medium=thisweekinreact)** took place in New York. We partnered with the event organizers to send you a conf recap.
+Last week, **[React Summit US 2024](https://reactsummit.us?utm_source=Newsletter&utm_medium=thisweekinreact)** took place in New York. The [videos will be online soon](https://gitnation.com/events/react-summit-us-2024/talks). In the meantime, we partnered with the organizers to send you a recap of a few selected talks.
 
 <!-- truncate -->
 
